experiment_output/error_log/nondex-ZXingg-blog.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1222/wd/NonDex-plugin-test/github.com/ZXingg/blog/src/main/java/com/zxing/blog/domain/es/EsBlog.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1222/wd/NonDex-plugin-test/github.com/ZXingg/blog/src/main/java/com/zxing/blog/domain/es/EsBlog.java:22: error: cannot find symbol
@XmlRootElement // MediaType 转为 XML
 ^
  symbol: class XmlRootElement
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2m 50s
